test/classes/delete-free/shared/delete-shared.good
delete-shared.chpl:6: error: 'delete' is not allowed on a shared class type
