test/classes/delete-free/shared/delete-shared.chpl
class MyClass {
  var field:int;
}

var z = new shared MyClass(3);
delete z;
